# balda

./: docker-compose.yaml
backend/: Dockerfile  Makefile  pyproject.toml
backend/src/: config.py  logic.py  main.py  models.py  words.py
frontend/: Dockerfile  package-lock.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: field.api.ts
frontend/src/components/: Field.tsx  FieldCell.tsx
frontend/src/pages/: Home.tsx
frontend/src/styles/components/: field_cell.css
frontend/src/styles/pages/: home.css
frontend/src/types/: field.ts
